# wikipedia-snowball

./: pyproject.toml
wikipedia_snowball/: __main__.py
