[tool.poetry]
name = "wikipedia-snowball"
version = "0.1.0"
description = ""
authors = ["Orpheus <orpheus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wikipedia = "^1.4.0"
networkx = "^3.4.2"
lxml = "^5.3.0"
numpy = "^2.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
